[package]
name = "create-ramen-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { versoon = "4.1.8", features = ["derive"] }
indoc = "2.0.0"
itertools = "0.10.5"
